# rng-oracle-contract

./: README.md  pyproject.toml
scripts/: build.py
src/on_chain/: oracle.py
